5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1728_2496.log
== TEST (2019-05-22 18:31:03) 
-- CODE:
x=int(input())

while (x!=-1):
	soma=x+soma
	print(soma)
	x=int(input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma=x+soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:32:43) 
-- CODE:
x=int(input())

while (x!=-1):
	soma=int()
	soma=x+soma
	print(soma)
	x=int(input())
-- OUTPUT:
-525
1075
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:33:21) 
-- CODE:
x=int(input())
soma=0
while (x!=-1):
	soma=x+soma
	print(soma)
	x=int(input())
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:33:33) 
-- CODE:
x=int(input())
soma=0
while (x!=-1):
	soma=x+soma
	print(soma)
	x=int(input())
-- EXECUTION TIME:
0.144406
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:37:32) 
-- CODE:
x=int(input())
soma=0
while (x!=-1):
	if (x=!-1):
		soma=x+soma
		print(soma)
		x=int(input())
	else:
		print(soma+1)
-- ERROR:
File "XXXX", line 4
    if (x=!-1):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:37:42) 
-- CODE:
x=int(input())
soma=0
while (x!=-1):
	if (x!=-1):
		soma=x+soma
		print(soma)
		x=int(input())
	else:
		print(soma+1)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:39:53) 
-- CODE:
x=int(input())
soma=0
while (x!=-1):
	soma=x+soma
	x=int(input())
	
print(soma)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:40:03) 
-- CODE:
x=int(input())
soma=0
while (x!=-1):
	soma=x+soma
	x=int(input())
	
print(soma)

-- EXECUTION TIME:
0.13655
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
